--- a/tasker/.env
+++ b/tasker/.env
@@ -1,1 +1,2 @@
 DB_CONNECT = mongodb+srv://dbadmin:Mihaitu3@universitycluster-b239a.mongodb.net/test?retryWrites=true&w=majority
+DB_LOCALDOCKER_CONNECT = mongodb://0.0.0.0:27017-27019/admin
