--- a/tasker/.env
+++ b/tasker/.env
@@ -1,2 +1,3 @@
-DB_CONNECT = mongodb+srv://dbadmin:Mihaitu3@universitycluster-b239a.mongodb.net/test?retryWrites=true&w=majority
-DB_LOCALDOCKER_CONNECT = mongodb://0.0.0.0:27017-27019/admin
+DB_CONNECT = mongodb+srv://dbtasker:Mihaitu3@universitycluster-b239a.mongodb.net/test?retryWrites=true&w=majority
+DB_LOCALDOCKER_CONNECT = mongodb://0.0.0.0:27017-27019/tasker
+TOKEN_SECRET = adfadfadr3412423sfsr235fgnaskdno12h4124
