--- a/tasker/package.json
+++ b/tasker/package.json
@@ -11,6 +11,7 @@
     "@hapi/joi": "^16.1.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "*",
+    "cassandra-driver": "^4.2.0",
     "cors": "*",
     "dotenv": "^8.1.0",
     "express": "*",
