--- a/co2_sensor/package.json
+++ b/co2_sensor/package.json
@@ -10,6 +10,8 @@
   "author": "Mihai Popescu",
   "license": "MIT",
   "dependencies": {
+    "cassandra-driver": "^4.2.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mongodb": "^3.3.2"
   },
