--- a/tasker/kubernetes/front-end-service.yaml
+++ b/tasker/kubernetes/front-end-service.yaml
@@ -8,5 +8,7 @@ spec:
     # matches with Deployment spec.selector.matchLabels
     app: front-end
   ports:
-    - port: 80
+    - protocol: "TCP"
+      port: 80
       targetPort: 80
+  type: LoadBalancer
