--- a/gw_sensor/package.json
+++ b/gw_sensor/package.json
@@ -10,7 +10,10 @@
   "author": "Mihai Popescu",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "cassandra-driver": "^4.2.0",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
