I tried connecting to the back end via ingress but failed

--- a/tasker/kubernetes/ingress.yaml
+++ b/tasker/kubernetes/ingress.yaml
@@ -7,9 +7,14 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: api.minikube.info
+  - host: minikube.info
     http:
       paths:
+      - path: /api/
+        backend:
+          # matches with Service metadata.name
+          serviceName: back-end-service
+          servicePort: 5000
       - path: /
         backend:
           # matches with Service metadata.name
