--- a/tasker/backend/package.json
+++ b/tasker/backend/package.json
@@ -16,7 +16,8 @@
     "express": "*",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "*",
-    "mongoose": "^5.7.1"
+    "mongoose": "^5.7.1",
+    "socket.io": "^2.3.0"
   },
   "author": "Mihai Popescu",
   "license": "MIT",
