--- a/tasker/frontend/package.json
+++ b/tasker/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "fibers": "^4.0.1",
     "sass": "^1.23.0",
@@ -16,6 +17,7 @@
     "socket.io-client": "^2.3.0",
     "uws": "^100.0.1",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.4.2",
     "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.1.3",
     "vue-socket.io": "^3.0.7"
