authentification using JWT almost done

--- a/tasker/.env
+++ b/tasker/.env
@@ -1,3 +1,4 @@
 DB_CONNECT = mongodb+srv://dbtasker:Mihaitu3@universitycluster-b239a.mongodb.net/test?retryWrites=true&w=majority
 DB_LOCALDOCKER_CONNECT = mongodb://0.0.0.0:27017-27019/tasker
 TOKEN_SECRET = adfadfadr3412423sfsr235fgnaskdno12h4124
+JWT_TOKEN = 124dwadrh235raodtai73h51725hawoien8124hqwioehraier1h4y124h)H!@U$!@$Nhaidfao
