--- a/tasker/frontend/Dockerfile
+++ b/tasker/frontend/Dockerfile
@@ -1,5 +1,17 @@
 FROM node:lts-alpine as build-stage
 
+# Add nginx and nodejs
+RUN apk add --update nginx nodejs
+
+# Create the directories we will need
+RUN mkdir -p /tmp/nginx/vue-single-page-app
+RUN mkdir -p /var/log/nginx
+RUN mkdir -p /var/www/html
+
+# Copy the respective nginx configuration files
+COPY nginx_config/nginx.conf /etc/nginx/nginx.conf
+COPY nginx_config/default.conf /etc/nginx/conf.d/default.conf
+
 # Make 'client' the current working directory
 WORKDIR frontend
 
@@ -17,7 +29,10 @@ RUN npm run build
 
 # production stage
 FROM nginx:stable-alpine as production-stage
-COPY --from=build-stage frontend/dist /usr/share/nginx/html
+COPY --from=build-stage /frontend/dist /usr/share/nginx/html
+
+# make all files belong to nginx user
+RUN chown nginx:nginx /var/www/html
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
