--- a/tasker/frontend/Dockerfile
+++ b/tasker/frontend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:lts-alpine as build-stage
 
 # Copy the respective nginx configuration files
 COPY nginx_config/nginx.conf /etc/nginx/nginx.conf
-COPY nginx_config/default.conf /etc/nginx/conf.d/default.conf
+# COPY nginx_config/default.conf /etc/nginx/conf.d/default.conf
 
 # Make 'client' the current working directory
 WORKDIR frontend
@@ -21,8 +21,10 @@ RUN npm run build
 
 # production stage
 FROM nginx:stable-alpine as production-stage
-COPY --from=build-stage /frontend/dist /usr/share/nginx/html
+COPY --from=build-stage frontend/dist /usr/share/nginx/html
 
+# COPY nginx_config/prod.conf /temp/prod.conf
+# RUN envsubst frontend < /temp/prod.conf > /etc/nginx/conf.d/prod.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
