--- a/tasker/frontend/nginx_config/nginx.conf
+++ b/tasker/frontend/nginx_config/nginx.conf
@@ -1,26 +1,14 @@
-server {
-  listen 80 default_server;
-  listen [::]:80 default_server;
+events {
+    worker_connections  1024;
+}
 
-  root /usr/share/nginx/html;
+http {
+    server {
+        listen 80;
+        root /usr/share/nginx/html;
 
-  index index.html;
-
-  server_name front-end;
-
-  location / {
-    try_files $uri $uri/ @rewrites;
-  }
-
-  location @rewrites {
-    rewrite ^(.+)$ /index.html last;
-  }
-
-  location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
-    # Some basic cache-control for static files to be sent to the browser
-    expires max;
-    add_header Pragma public;
-    add_header Cache-Control "public, must-revalidate, proxy-revalidate";
-  }
-
+        location / {
+            try_files $uri /index.html;
+        }
+    }
 }
