--- a/tasker/frontend/nginx_config/nginx.conf
+++ b/tasker/frontend/nginx_config/nginx.conf
@@ -2,13 +2,18 @@ events {
     worker_connections  1024;
 }
 
-http {
-    server {
-        listen 80;
-        root /usr/share/nginx/html;
 
-        location / {
-            try_files $uri /index.html;
-        }
+server {
+    listen 80;
+    root http://localhost:5000;
+    server_name frontend.com;
+
+    location / {
+        try_files $uri $uri/ /index.html;
     }
+
+    # location /api {
+    #     proxy_pass http://localhost:5000/api;
+    # }
 }
+
