--- a/history_retriever/package.json
+++ b/history_retriever/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.3.2",
+    "ping": "^0.2.2",
     "socket.io": "^2.3.0"
   }
 }
