ingestion service and simple communication between sensors and ingestion service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,3 +88,12 @@ services:
       - isolation-network
     depends_on:
       - cassandra-cluster
+
+  ingest:
+    container_name: ingest
+    restart: always
+    build: ingestion
+    ports:
+      - '4003:4003'
+    networks:
+      - isolation-network
