--- a/gw_sensor/package.json
+++ b/gw_sensor/package.json
@@ -10,6 +10,7 @@
   "author": "Mihai Popescu",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.0",
     "cassandra-driver": "^4.2.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
