--- a/packager/package.json
+++ b/packager/package.json
@@ -9,6 +9,7 @@
   "author": "Mihai Popescu",
   "license": "MIT",
   "dependencies": {
+    "amqplib": "^0.5.5",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cassandra-driver": "^4.3.0",
