--- a/kompose_generated_files/docker-compose.yml
+++ b/kompose_generated_files/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - '5000:5000'
     networks:
       - isolation-network
+    depends_on:
+      - mongo-node
     
   mongo-node:
     container_name: mongo-node
@@ -76,7 +78,7 @@ services:
     networks:
       - isolation-network
     depends_on:
-      - cassandra-cluster
+      - mongo-node
     
   co2-sensor:
     container_name: co2-sensor
@@ -87,4 +89,34 @@ services:
     networks:
       - isolation-network
     depends_on:
-      - cassandra-cluster
+      - mongo-node
+
+  ingest:
+    container_name: ingest
+    restart: always
+    build: ingestion
+    ports:
+      - '4003:4003'
+    networks:
+      - isolation-network
+  
+  rabbit:
+    container_name: rabbit
+    restart: always
+    image: rabbitmq:3
+    hostname: rabbit
+    ports:
+      - '5672:5672'
+    networks:
+      - isolation-network
+  
+  packager:
+    container_name: packager
+    restart: always
+    build: packager
+    ports:
+      - '4004:4004'
+    networks:
+      - isolation-network
+    depends_on:
+      - mongo-node
