Modified the kubernetes files

--- a/kubernetes/ingress/ingress.yaml
+++ b/kubernetes/ingress/ingress.yaml
@@ -7,14 +7,9 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: minikube.info
+  - host: www.minikube.info
     http:
       paths:
-      - path: /api/
-        backend:
-          # matches with Service metadata.name
-          serviceName: back-end-service
-          servicePort: 5000
       - path: /
         backend:
           # matches with Service metadata.name
