--- a/kubernetes/front-end/front-end-service.yaml
+++ b/kubernetes/front-end/front-end-service.yaml
@@ -8,7 +8,5 @@ spec:
     # matches with Deployment spec.selector.matchLabels
     app: front-end
   ports:
-    - protocol: "TCP"
-      port: 80
+    - port: 80
       targetPort: 80
-  type: LoadBalancer
