--- a/kubernetes/ingress/ingress.yaml
+++ b/kubernetes/ingress/ingress.yaml
@@ -3,13 +3,16 @@ kind: Ingress
 metadata:
   name: tasker-ingress
   namespace: default
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
   - host: www.minikube.info
     http:
       paths:
+      - path: /api
+        backend:
+          # matches with Service metadata.name
+          serviceName: back-end-service
+          servicePort: 5000
       - path: /
         backend:
           # matches with Service metadata.name
