Changed ingress as welll

--- a/kubernetes/ingress/ingress.yaml
+++ b/kubernetes/ingress/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   rules:
-  - host: www.minikube.info
+  - host: minikube.info
     http:
       paths:
       - path: /api
