--- a/tasker/backend/package.json
+++ b/tasker/backend/package.json
@@ -8,15 +8,16 @@
     "dev": "nodemon server/index.js"
   },
   "dependencies": {
-    "@hapi/joi": "^16.1.4",
+    "@hapi/joi": "^16.1.7",
     "bcryptjs": "^2.4.3",
-    "body-parser": "*",
-    "cors": "*",
-    "dotenv": "^8.1.0",
-    "express": "*",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "*",
-    "mongoose": "^5.7.1",
+    "mongodb": "^3.3.3",
+    "mongoose": "^5.7.7",
+    "nodemon": "^1.19.4",
     "socket.io": "^2.3.0"
   },
   "author": "Mihai Popescu",
