--- a/kubernetes/cassandra/old/cassandra-statefulset.yaml
+++ b/kubernetes/cassandra/old/cassandra-statefulset.yaml
@@ -89,10 +89,10 @@ spec:
       resources:
         requests:
           storage: 1Gi
----
-kind: StorageClass
-apiVersion: storage.k8s.io/v1
-metadata:
-  name: slow
-provisioner: k8s.io/minikube-hostpath
+#---
+#kind: StorageClass
+#apiVersion: storage.k8s.io/v1
+#metadata:
+#  name: slow
+#provisioner: k8s.io/minikube-hostpath
 
