--- a/kubernetes/history_retriever/history-retriever-service.yaml
+++ b/kubernetes/history_retriever/history-retriever-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: back-end-service
+  name: history-retriever-service
   namespace: default
 spec:
   selector:
     # matches with Deployment spec.selector.matchLabels
-    app: back-end
+    app: history-retriever
   ports:
-    - port: 5000
-      targetPort: 5000
+    - port: 4002
+      targetPort: 4002
