--- a/kubernetes/ingestion/ingestion-service.yaml
+++ b/kubernetes/ingestion/ingestion-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: back-end-service
+  name: ingestion-service
   namespace: default
 spec:
   selector:
     # matches with Deployment spec.selector.matchLabels
-    app: back-end
+    app: ingestion
   ports:
-    - port: 5000
-      targetPort: 5000
+    - port: 4003
+      targetPort: 4003
