--- a/kubernetes/packager/packager-service.yaml
+++ b/kubernetes/packager/packager-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: back-end-service
+  name: packager-service
   namespace: default
 spec:
   selector:
     # matches with Deployment spec.selector.matchLabels
-    app: back-end
+    app: packager
   ports:
-    - port: 5000
-      targetPort: 5000
+    - port: 4004
+      targetPort: 4004
