--- a/kubernetes/rabbit/rabbit-service.yaml
+++ b/kubernetes/rabbit/rabbit-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: back-end-service
+  name: rabbit-service
   namespace: default
 spec:
   selector:
     # matches with Deployment spec.selector.matchLabels
-    app: back-end
+    app: rabbit
   ports:
-    - port: 5000
-      targetPort: 5000
+    - port: 5672
+      targetPort: 5672
